# codesync

./: Cargo.toml  README.md
src/: kmp.rs  lib.rs  main.rs
src/inflector/: mod.rs
src/inflector/case/: camel.rs  kebab.rs  mod.rs  pascal.rs  screaming_snake.rs  sentence.rs  snake.rs  train.rs
