[package]
edition = "2021"
name = "codesync"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
codespan-reporting = "0.11.1"
grep = "0.2.12"
ignore = "0.4.20"
regex = "1.9.1"
